[gd_scene load_steps=20 format=3 uid="uid://bx7fk0shftvp5"]

[ext_resource type="Script" path="res://mods-unpacked/GlitchedData-MultiPlayer/utils/InviteMenu.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/fake receipt.otf" id="2"]
[ext_resource type="FontFile" path="res://fonts/DOTMATRI.TTF" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvphg"]
bg_color = Color(1, 1, 1, 0.121569)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk0tl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i21ws"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_godotIsFun"]
resource_name = "RESET"
length = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector2(633, 14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_l4vn6"]
resource_name = "toggle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(633, 14), Vector2(731.5, 14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgobc"]
_data = {
"RESET": SubResource("Animation_godotIsFun"),
"toggle": SubResource("Animation_l4vn6")
}

[sub_resource type="Animation" id="Animation_ctpmb"]
resource_name = "connecting"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.0, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Connecting To Server...", "Connecting To Server.", "Connecting To Server..", "Connecting To Server..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_214l3"]
_data = {
"connecting": SubResource("Animation_ctpmb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lnrk"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p0rh"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwma3"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.729412, 0.94902, 0.705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugsc6"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.729412, 0.94902, 0.705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq0lo"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.72549, 0.945098, 0.701961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl8ua"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Animation" id="Animation_ke08f"]
resource_name = "countdown"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["5
", "4", "3", "2
", "1
", "0
"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_duf5e"]
_data = {
"countdown": SubResource("Animation_ke08f")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6aeu"]
bg_color = Color(0.227451, 0.227451, 0.227451, 0.529412)
expand_margin_left = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_r6o12"]
font = ExtResource("3")
font_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_771gu"]
bg_color = Color(0.261113, 0.261113, 0.261112, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmgcm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="InviteMenu" type="Control" node_paths=PackedStringArray("inviteContainer", "inviteList", "popupSection", "playerListSection", "signupSection", "menuButton", "incomingButton", "outgoingButton", "buttonHighlightAnimator", "crtMenu", "userList", "userListLeaderboard", "usernameInput", "signupButton", "opponentUsernameLabel", "gameReadySection", "joiningGameSection", "timerAccept", "timerJoin", "errorLabel", "title", "underline", "onlinePlayers", "chat_parent", "chat_array", "chat_background", "chat_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
inviteContainer = NodePath("invite list")
inviteList = NodePath("invite list/container")
popupSection = NodePath("popup section")
playerListSection = NodePath("crt menu/playerlist section")
signupSection = NodePath("crt menu/signup section")
menuButton = NodePath("menuButton")
incomingButton = NodePath("incoming")
outgoingButton = NodePath("outgoing")
buttonHighlightAnimator = NodePath("ColorRect/AnimationPlayer")
crtMenu = NodePath("crt menu")
userList = NodePath("crt menu/playerlist section/ScrollContainer/userList")
userListLeaderboard = NodePath("crt menu/playerlist section/ScrollContainer/userListLeaderboard")
usernameInput = NodePath("crt menu/signup section/LineEdit")
signupButton = NodePath("crt menu/signup section/Button")
opponentUsernameLabel = NodePath("invite accepted/Panel/username")
gameReadySection = NodePath("invite accepted")
joiningGameSection = NodePath("joining game")
timerAccept = NodePath("invite accepted/Panel/label3/AnimationPlayer")
timerJoin = NodePath("joining game/Panel/label3/AnimationPlayer")
errorLabel = NodePath("crt menu/signup section/error")
title = NodePath("crt menu/title")
underline = NodePath("crt menu/underline")
onlinePlayers = NodePath("crt menu/playerlist section/online players")
chat_parent = NodePath("chat")
chat_array = [NodePath("chat/chat1"), NodePath("chat/chat2"), NodePath("chat/chat3"), NodePath("chat/chat4"), NodePath("chat/chat5"), NodePath("chat/chat6"), NodePath("chat/chat7"), NodePath("chat/chat8"), NodePath("chat/chat9"), NodePath("chat/chat10")]
chat_background = NodePath("chat/chat input background")
chat_input = NodePath("chat/chat input")

[node name="invite list" type="ScrollContainer" parent="."]
visible = false
clip_children = 2
layout_mode = 0
offset_left = 631.0
offset_top = 39.0
offset_right = 949.0
offset_bottom = 551.0
scale = Vector2(1, 0.96)
theme_override_styles/panel = SubResource("StyleBoxFlat_jvphg")
follow_focus = true
horizontal_scroll_mode = 0

[node name="container" type="VBoxContainer" parent="invite list"]
z_index = 1
custom_minimum_size = Vector2(309.75, 505.105)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="menuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 10.0
offset_right = 949.0
offset_bottom = 37.0
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 18
icon_alignment = 1

[node name="incoming" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 630.0
offset_top = 10.0
offset_right = 722.0
offset_bottom = 41.0
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_styles/normal = SubResource("StyleBoxFlat_hk0tl")
text = "INCOMING"

[node name="outgoing" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 729.0
offset_top = 10.0
offset_right = 824.0
offset_bottom = 41.0
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_styles/normal = SubResource("StyleBoxFlat_i21ws")
text = "OUTGOING"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -2
layout_mode = 0
offset_left = 633.0
offset_top = 14.0
offset_right = 720.0
offset_bottom = 35.0
color = Color(0.101961, 0.101961, 0.101961, 0.501961)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_rgobc")
}

[node name="chat" type="Control" parent="."]
anchors_preset = 0
offset_left = 3.0
offset_top = 310.0
offset_right = 631.0
offset_bottom = 531.0

[node name="chat1" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 3.0
offset_right = 628.33
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat2" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 23.0
offset_right = 628.33
offset_bottom = 43.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat3" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 43.0
offset_right = 628.33
offset_bottom = 63.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat4" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 63.0
offset_right = 628.33
offset_bottom = 83.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat5" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 83.0
offset_right = 628.33
offset_bottom = 103.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat6" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 103.0
offset_right = 628.33
offset_bottom = 123.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat7" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 123.0
offset_right = 628.33
offset_bottom = 143.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat8" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 143.0
offset_right = 628.33
offset_bottom = 163.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat9" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 163.0
offset_right = 628.33
offset_bottom = 183.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat10" type="Label" parent="chat"]
offset_left = 2.33
offset_top = 183.0
offset_right = 628.33
offset_bottom = 203.0
theme_override_styles/normal = SubResource("StyleBoxFlat_x6aeu")
label_settings = SubResource("LabelSettings_r6o12")
clip_text = true

[node name="chat input background" type="ColorRect" parent="chat"]
offset_top = 203.0
offset_right = 628.0
offset_bottom = 221.0
color = Color(0.168627, 0.168627, 0.168627, 0.529412)
visible = false

[node name="chat input" type="LineEdit" parent="chat"]
offset_left = 2.0
offset_top = 197.0
offset_right = 532.0
offset_bottom = 228.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_771gu")
theme_override_styles/focus = SubResource("StyleBoxFlat_tmgcm")
expand_to_text_length = true
caret_blink = true
visible = false

[node name="connecting" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 352.0
offset_top = 244.0
offset_right = 570.0
offset_bottom = 266.0
theme_override_colors/font_color = Color(0.648438, 0.832031, 0.632813, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Connecting To Server..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="connecting"]
libraries = {
"": SubResource("AnimationLibrary_214l3")
}

[node name="Panel" type="Panel" parent="connecting"]
z_index = -1
layout_mode = 0
offset_left = -6.0
offset_top = -10.0
offset_right = 224.0
offset_bottom = 30.0

[node name="connectFail" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 342.0
offset_top = 232.0
offset_right = 579.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(0.648438, 0.832031, 0.632813, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "COULD NOT CONTACT SERVER.
PLEASE TRY AGAIN LATER."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="connectFail"]
z_index = -1
layout_mode = 0
offset_left = -7.0
offset_top = -6.0
offset_right = 242.0
offset_bottom = 45.0

[node name="disconnected" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 370.0
offset_top = 241.0
offset_right = 617.0
offset_bottom = 283.0
theme_override_colors/font_color = Color(0.648438, 0.832031, 0.632813, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Lost connection to server.
Use CRT to reconnect."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="disconnected"]
z_index = -1
layout_mode = 0
offset_left = -10.0
offset_top = -7.0
offset_right = 257.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7lnrk")

[node name="disconnectedInGame" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 370.0
offset_top = 222.0
offset_right = 617.0
offset_bottom = 306.0
theme_override_colors/font_color = Color(0.648438, 0.832031, 0.632813, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Lost connection to server.
Returning to lobby..."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="disconnectedInGame"]
z_index = -1
layout_mode = 0
offset_left = -10.0
offset_top = -7.0
offset_right = 257.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7lnrk")

[node name="opponentDisconnected" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 360.0
offset_top = 240.0
offset_right = 607.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(0.648438, 0.832031, 0.632813, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Opponent disconnected
returning to lobby..."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="opponentDisconnected"]
z_index = -1
layout_mode = 0
offset_left = 9.0
offset_top = -7.0
offset_right = 236.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7lnrk")

[node name="crt menu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 138.0
offset_right = 598.0
offset_bottom = 367.0
rotation = -0.00523599
theme_override_styles/panel = SubResource("StyleBoxFlat_0p0rh")

[node name="title" type="Label" parent="crt menu"]
layout_mode = 0
offset_top = 13.0
offset_bottom = 31.0
offset_right = 278.0
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.764706, 1, 0.741176, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "MULTIPLAYER"

[node name="underline" type="Label" parent="crt menu"]
layout_mode = 0
offset_top = 21.0
offset_bottom = 39.0
offset_right = 278.0
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.764706, 1, 0.741176, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "-----------"

[node name="playerlist section" type="Control" parent="crt menu"]
visible = false
anchors_preset = 0
offset_top = 41.0
offset_right = 278.0
offset_bottom = 229.0

[node name="online players" type="Label" parent="crt menu/playerlist section"]
layout_mode = 2
offset_left = 9.0
offset_top = 7.0
offset_right = 267.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.764706, 1, 0.741176, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 10
text = "ONLINE PLAYERS"

[node name="underline" type="Label" parent="crt menu/playerlist section/online players"]
layout_mode = 0
offset_top = 14.0
offset_right = 258.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.764706, 1, 0.741176, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 10
text = "--------------------------------------"

[node name="ScrollContainer" type="ScrollContainer" parent="crt menu/playerlist section"]
layout_mode = 2
offset_left = 9.0
offset_top = 35.0
offset_right = 266.0
offset_bottom = 186.0
follow_focus = true
vertical_scroll_mode = 3

[node name="userList" type="VBoxContainer" parent="crt menu/playerlist section/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="userListLeaderboard" type="VBoxContainer" parent="crt menu/playerlist section/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0
visible = false

[node name="signup section" type="Control" parent="crt menu"]
visible = false
anchors_preset = 0
offset_top = 41.0
offset_right = 278.0
offset_bottom = 229.0

[node name="LineEdit" type="LineEdit" parent="crt menu/signup section"]
layout_mode = 0
offset_left = 91.499
offset_top = 54.9921
offset_right = 188.499
offset_bottom = 74.9921
theme_override_colors/font_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/font_selected_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/font_uneditable_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/font_placeholder_color = Color(0.65098, 0.921569, 0.623529, 0.560784)
theme_override_colors/font_outline_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/caret_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/selection_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/clear_button_color = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_colors/clear_button_color_pressed = Color(0.72549, 0.945098, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_dwma3")
theme_override_styles/focus = SubResource("StyleBoxFlat_ugsc6")
placeholder_text = " USERNAME "
max_length = 10
caret_blink = true

[node name="Button" type="Button" parent="crt menu/signup section"]
layout_mode = 0
offset_left = 108.339
offset_top = 85.5689
offset_right = 170.339
offset_bottom = 104.569
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_wq0lo")
text = "SIGN UP"

[node name="error" type="Label" parent="crt menu/signup section"]
layout_mode = 0
offset_top = 163.0
offset_right = 277.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0.722656, 0.941406, 0.699219, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 9
horizontal_alignment = 1

[node name="invite accepted" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="invite accepted"]
layout_mode = 0
offset_left = 383.0
offset_top = 217.0
offset_right = 562.0
offset_bottom = 322.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yl8ua")

[node name="username" type="Label" parent="invite accepted/Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 9.0
offset_right = 169.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "username"
horizontal_alignment = 1

[node name="label" type="Label" parent="invite accepted/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 27.0
offset_right = 176.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "ACCEPTED YOUR INVITE!"
horizontal_alignment = 1

[node name="label2" type="Label" parent="invite accepted/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 62.0
offset_right = 157.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "STARTING GAME IN:"

[node name="label3" type="Label" parent="invite accepted/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 78.0
offset_right = 157.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "0
"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="invite accepted/Panel/label3"]
libraries = {
"": SubResource("AnimationLibrary_duf5e")
}

[node name="joining game" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="joining game"]
layout_mode = 0
offset_left = 382.0
offset_top = 236.0
offset_right = 561.0
offset_bottom = 293.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yl8ua")

[node name="label2" type="Label" parent="joining game/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 157.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "STARTING GAME IN:"

[node name="label3" type="Label" parent="joining game/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 28.0
offset_right = 157.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.662745, 1, 0.635294, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "0
"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="joining game/Panel/label3"]
libraries = {
"": SubResource("AnimationLibrary_duf5e")
}

[node name="popup section" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 478.0
offset_right = 60.0
offset_bottom = 518.0